# rba

./: BUILD.md
unittest/: BUILD.md  CMakeLists.txt  README.md  run_ut.bat  run_ut.sh  v2_run.sh
unittest/api_test/: HA302_AreaPositionOffset.cpp  HA302_AreaPositionOffset.hpp  HA457_CancelArbitration.cpp  HA457_CancelArbitration.hpp  HA493_SetResultContentState_AreaZoneConstraint.cpp  HA493_SetResultContentState_AreaZoneConstraint.hpp  HA493_SetResultContentState_UnknownContext.cpp  HA493_SetResultContentState_UnknownContext.hpp  HA493_SetResultContentState_UnknownContext.json  HA493_SetSceneProperties.cpp  HA493_SetSceneProperties.hpp  HA493_SetSceneProperty.cpp  HA493_SetSceneProperty.hpp  HA908_coverage_SetModel.cpp  HA908_coverage_SetModel.hpp  HA908_coverage_SetModel.json  HA908_coverage_SetModel2.json  HA919_Result_SatisfiesConstraints_GetSceneProperty.cpp  HA919_Result_SatisfiesConstraints_GetSceneProperty.hpp  HA919_Result_SatisfiesConstraints_GetSceneProperty.json  ResultAPI.cpp  ResultAPI.hpp  ResultAPI_allocCont.cpp  ResultAPI_allocCont.hpp  ResultAPI_allocCont.json  ResultAPI_api.cpp  ResultAPI_api.hpp  ResultAPI_hidden.cpp  ResultAPI_hidden.hpp  ResultAPI_modelDef.cpp  ResultAPI_modelDef.hpp  ResultAPI_mute.cpp  ResultAPI_mute.hpp  ResultAPI_viewaction.cpp  ResultAPI_viewaction.hpp  TestCommon.hpp
unittest/internal_test/: HA1003_hasDisplayingArea.cpp  HA1003_hasDisplayingArea.hpp  HA1003_hasDisplayingArea.json  HA1009_clear.cpp  HA1009_clear.hpp  HA1009_clear.json  HA1014_viewaction.cpp  HA1014_viewaction.hpp  HA1014_viewaction.json  HA1033_ExceptionBeforeArbitrate.cpp  HA1033_ExceptionBeforeArbitrate.hpp  HA1033_leftInfo_beforeArbitrate.cpp  HA1033_leftInfo_beforeArbitrate.hpp  HA1051_affectedAlloReArb_ALL_AREAS_Lhs.cpp  HA1051_affectedAlloReArb_ALL_AREAS_Lhs.hpp  HA1051_affectedAlloReArb_ALL_AREAS_Rhs.cpp  HA1051_affectedAlloReArb_ALL_AREAS_Rhs.hpp  HA1051_affectedAlloReArb_ALL_SOUNDCONTENTS_Lhs.cpp  HA1051_affectedAlloReArb_ALL_SOUNDCONTENTS_Lhs.hpp  HA1051_affectedAlloReArb_ALL_SOUNDCONTENTS_Rhs.cpp  HA1051_affectedAlloReArb_ALL_SOUNDCONTENTS_Rhs.hpp  HA1051_affectedAlloReArb_ALL_VIEWCONTENTS_Lhs.cpp  HA1051_affectedAlloReArb_ALL_VIEWCONTENTS_Lhs.hpp  HA1051_affectedAlloReArb_ALL_VIEWCONTENTS_Lhs.json  HA1051_affectedAlloReArb_ALL_VIEWCONTENTS_Rhs.cpp  HA1051_affectedAlloReArb_ALL_VIEWCONTENTS_Rhs.hpp  HA1051_affectedAlloReArb_ALL_ZONES_Lhs.cpp  HA1051_affectedAlloReArb_ALL_ZONES_Lhs.hpp  HA1051_affectedAlloReArb_ALL_ZONES_Rhs.cpp  HA1051_affectedAlloReArb_ALL_ZONES_Rhs.hpp  HA1051_affectedAlloReArb_AffectsAffects_1on1.cpp  HA1051_affectedAlloReArb_AffectsAffects_1on1.hpp  HA1051_affectedAlloReArb_AffectsAffects_1on2.cpp  HA1051_affectedAlloReArb_AffectsAffects_1on2.hpp  HA1051_affectedAlloReArb_AffectsAffects_1on2.json  HA1051_affectedAlloReArb_AffectsAffects_2on1.cpp  HA1051_affectedAlloReArb_AffectsAffects_2on1.hpp  HA1051_affectedAlloReArb_AffectsAffects_2on1.json  HA1051_affectedAlloReArb_AffectsAffects_2on2.cpp  HA1051_affectedAlloReArb_AffectsAffects_2on2.hpp  (+485 more)
unittest/logic_test/: AllInstanceOfArea.cpp  AllInstanceOfArea.hpp  AllInstanceOfContent.cpp  AllInstanceOfContent.hpp  AllInstanceOfContent.json  AllInstanceOfSoundContent.cpp  AllInstanceOfSoundContent.hpp  AllInstanceOfSoundContent.json  AllInstanceOfZone.cpp  AllInstanceOfZone.hpp  AllocatedContent.cpp  AllocatedContent.hpp  AllocatedContent_IsSounding.cpp  AllocatedContent_IsSounding.hpp  AllocatedContent_IsSounding.json  AllocatedContent_IsVisible.cpp  AllocatedContent_IsVisible.hpp  AllocatedContent_Sound_.cpp  AllocatedContent_Sound_.hpp  AllocatedContent_isActive.cpp  AllocatedContent_isActive.hpp  AndOperator.cpp  AndOperator.hpp  AndOperator.json  ArbitrationPolicy_FirstComeFirst.cpp  ArbitrationPolicy_FirstComeFirst.hpp  ArbitrationPolicy_FirstComeFirst_Zone_.cpp  ArbitrationPolicy_FirstComeFirst_Zone_.hpp  ArbitrationPolicy_LastComeFirst.cpp  ArbitrationPolicy_LastComeFirst.hpp  ArbitrationPolicy_LastComeFirst.json  ArbitrationPolicy_LastComeFirst_Zone_.cpp  ArbitrationPolicy_LastComeFirst_Zone_.hpp  ArbitrationPolicy_PriorityFirstComeFirst.cpp  (+979 more)
unittest/msvc/: README.txt
(+3748 files in other folders)
